--- a/aaron.washington/lib/css/styleguide.css
+++ b/aaron.washington/lib/css/styleguide.css
@@ -9,7 +9,7 @@
     --color-primary-dark: #202124;
     --color-primary-light: #f7f7f7;
     --color-primary-accent-red: #ea3d3d;
-    --color-primary-accent-purple: #a124db;
+    --color-primary-accent-purple: #A643B8;
     --color-text-dark: #202124;
     --color-text-light: #fff;
 
