--- a/aaron.washington/css/storetheme.css
+++ b/aaron.washington/css/storetheme.css
@@ -14,6 +14,8 @@ body {
 
     .navbar a h2 {
         color: var(--color-primary-dark);
+        margin: 0;
+        font-weight: 500;
     }
 
         .navbar a:hover {
@@ -38,6 +40,7 @@ body {
 
 .nav a {
     color: var(--color-primary-dark);
+    padding: 0 2rem;
 }
 
     .nav a:hover {
