--- a/aaron.washington/lib/css/styleguide.css
+++ b/aaron.washington/lib/css/styleguide.css
@@ -31,7 +31,7 @@ h4,
 h5 {
     font-family: 'Rubik', Arial, sans-serif;
     font-weight: 700;
-    margin: 1rem 0rem;
+    margin: 0.5rem 0rem 1rem 0rem;
     padding: 0;
 }
 
@@ -75,25 +75,45 @@ a {
     }
 
 
-button {
+button.dark {
+    margin-top: 0.5rem;
     color: var(--color-primary-dark);
     min-width: 9rem;
-    margin: 0;
     padding: 1rem;
     border: 0.15rem solid var(--color-primary-dark);
     background-color: rgba(0,0,0,0);
     border-radius: 0.7rem;
     font-size: 1rem;
-    font-weight: 500;
+    font-weight: 400;
     transition: all 0.2s ease-in-out;
 }
 
-    button:hover {
+    button.dark:hover {
         color: var(--color-primary-light);
         border: 0.15rem solid var(--color-primary-dark);
-        font-weight: 500;
         cursor: pointer;
         background-color: rgba(32,33,36,1);
+    }
+
+
+button.light {
+    margin-top: 0.5rem;
+    color: var(--color-primary-light);
+    min-width: 9rem;
+    padding: 1rem;
+    border: 0.15rem solid var(--color-primary-light);
+    background-color: rgba(0,0,0,0);
+    border-radius: 0.7rem;
+    font-size: 1rem;
+    font-weight: 400;
+    transition: all 0.2s ease-in-out;
+}
+
+    button.light:hover {
+        color: var(--color-primary-dark);
+        border: 0.15rem solid var(--color-primary-light);
+        cursor: pointer;
+        background-color: rgba(247,247,247,1);
     }
 
 
@@ -168,7 +188,7 @@ button {
 .home-logo {
     width: 4rem;
     height: var(--header-height);
-    background-image: url('../img/AW-Logo.png');
+    background-image: url('../../img/AW-Logo.png');
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
@@ -193,9 +213,21 @@ button {
 /** HERO **/
 
 .hero {
+    width: 100%;
+    height: 40vh;
     background-image: url('#');
     background-position-x: right;
     background-position-y: center;
     background-repeat: no-repeat;
     background-position: fixed;
+    background-color: var(--color-primary-dark);
 }
+
+.hero-text {
+    max-width: 50%;
+    color: var(--color-primary-light);
+}
+
+    .hero-text h5 {
+        font-weight: 300;
+    }
