--- a/aaron.washington/lib/css/styleguide.css
+++ b/aaron.washington/lib/css/styleguide.css
@@ -21,7 +21,6 @@ body {
     margin: 0;
     font-size: 100%;
     font-family: 'Rubik', Arial, sans-serif;
-    background-color: var(--color-primary-light);
 }
 
 h1,
@@ -31,7 +30,7 @@ h4,
 h5 {
     font-family: 'Rubik', Arial, sans-serif;
     font-weight: 700;
-    margin: 0.5rem 0rem 1rem 0rem;
+    margin: 1rem 0rem 0.5rem 0rem;
     padding: 0;
 }
 
@@ -64,19 +63,20 @@ p {
 }
 
 a {
-    color:#aa5bEb;
+    color: inherit;
     text-decoration: none;
     font-family: 'Rubik', Arial, sans-serif;
     transition: all 0.15s ease-in-out;
 }
 
     a:hover {
-        color: #ea3d3d;
+        cursor: pointer;
+        color: #A643B8;
     }
 
 
 button.dark {
-    margin-top: 0.5rem;
+    margin-top: 1rem;
     color: var(--color-primary-dark);
     min-width: 9rem;
     padding: 1rem;
@@ -97,7 +97,7 @@ button.dark {
 
 
 button.light {
-    margin-top: 0.5rem;
+    margin-top: 1rem;
     color: var(--color-primary-light);
     min-width: 9rem;
     padding: 1rem;
@@ -180,7 +180,6 @@ button.light {
 
         .navbar a:hover {
             color: var(--color-primary-dark);
-            cursor: pointer;
             text-decoration: none;
         }
 
@@ -215,10 +214,10 @@ button.light {
 .hero {
     width: 100%;
     height: 40vh;
-    background-image: url('#');
     background-position-x: right;
     background-position-y: center;
     background-repeat: no-repeat;
+    background-size: cover;
     background-position: fixed;
     background-color: var(--color-primary-dark);
 }
@@ -228,6 +227,66 @@ button.light {
     color: var(--color-primary-light);
 }
 
+    .hero-text h4 {
+        font-weight: 600;
+    }
+
     .hero-text h5 {
         font-weight: 300;
     }
+
+
+.hero-landing {
+    background-image: url('#');
+}
+
+
+/** CARD **/
+
+.card {
+    margin: 0;
+    padding: 1rem;
+    background-color: var(--color-primary-light);
+}
+
+    .card a {
+        color: var(--color-primary-light);
+    }
+
+        .card a:hover {
+            color: var(--color-primary-light);
+        }
+
+    .card a h4 {
+        font-weight: 400;
+    }
+
+
+.card-img {
+    width: 100%;
+    height: 5vh;
+    padding: 2rem;
+    text-align: center;
+    background-position-x: right;
+    background-position-y: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: fixed;
+    background-color: var(--color-primary-dark);
+}
+
+.card-bg-1 {
+    background-image: url('#');
+}
+
+.card-bg-2 {
+    background-image: url('#');
+}
+
+.card-bg-3 {
+    background-image: url('#');
+}
+
+.card-bg-4 {
+    background-image: url('#');
+}
