--- a/aaron.washington/lib/css/styleguide.css
+++ b/aaron.washington/lib/css/styleguide.css
@@ -72,7 +72,7 @@ a {
 
     a:hover {
         cursor: pointer;
-        color: #A643B8;
+        color: var(--color-primary-accent-red);
     }
 
 
@@ -209,7 +209,7 @@ button.light {
 }
 
     .nav a:hover {
-        color: var(--color-primary-accent-purple);
+        color: var(--color-primary-accent-red);
     }
 
 
@@ -228,6 +228,7 @@ button.light {
 
 .hero-text {
     max-width: 50%;
+    padding: 2rem 3rem;
     color: var(--color-primary-light);
 }
 
@@ -236,7 +237,8 @@ button.light {
     }
 
     .hero-text h5 {
-        font-weight: 300;
+        color: var(--color-primary-dark);
+        font-weight: 400;
     }
 
 
