--- a/chipman.abigail/lib/css/gridsystem.css
+++ b/chipman.abigail/lib/css/gridsystem.css
@@ -6,46 +6,46 @@
 }
 
 .grid.ten {
+  display: grid;
   grid-template-columns: repeat(10, 1fr);
 }
 
-.grid-gap {
+.grid.gap {
   --grid-gap: 1em;
   grid-gap: var(--grid-gap);
   gap: var(--grid-gap);
 }
 
-
-/* EXTRA SMALL */
-
+/* x-small */
 @media (min-width: 0) {
-  .gap.xs-large { --grid-gap: 2em; }
-  .gap.xs-medium { --grid-gap: 1em; }
-  .gap.xs-small { --grid-gap: 0.5em; }
 
-  .col-xs-0 { display:none; }
+  .gap.xs-small { --grid-gap:0.5em; }
+  .gap.xs-medium { --grid-gap:1em; }
+  .gap.xs-large { --grid-gap:2em; }
+
+  .col-xs-0 { display:none;}
   .col-xs-1 { grid-column: span 1; }
   .col-xs-2 { grid-column: span 2; }
-  .col-xs-3 { grid-column: span 3;}
-  .col-xs-4 { grid-column: span 4;}
-  .col-xs-5 { grid-column: span 5;}
-  .col-xs-6 { grid-column: span 6;}
-  .col-xs-7 { grid-column: span 7;}
-  .col-xs-8 { grid-column: span 8;}
-  .col-xs-9 { grid-column: span 9;}
-  .col-xs-10 { grid-column: span 10;}
-  .col-xs-11 { grid-column: span 11;}
-  .col-xs-12 { grid-column: span 12;}
+  .col-xs-3 { grid-column: span 3; }
+  .col-xs-4 { grid-column: span 4; }
+  .col-xs-5 { grid-column: span 5; }
+  .col-xs-6 { grid-column: span 6; }
+  .col-xs-7 { grid-column: span 7; }
+  .col-xs-8 { grid-column: span 8; }
+  .col-xs-9 { grid-column: span 9; }
+  .col-xs-10 { grid-column: span 10; }
+  .col-xs-11 { grid-column: span 11; }
+  .col-xs-12 { grid-column: span 12; }
 }
 
-/* SMALL */
+/* small */
+@media (min-width: 350px) {
 
-@media (min-width: 350 px) {
-.gap.sm-large { --grid-gap: 2em; }
-.gap.sm-medium { --grid-gap: 1em; }
-.gap.sm-small { --grid-gap: 0.5em; }
+  .gap.sm-small { --grid-gap:0.5em; }
+  .gap.sm-medium { --grid-gap:1em; }
+  .gap.sm-large { --grid-gap:2em; }
 
-  .col-sm-0 { display:none; }
+  .col-sm-0 { display:none;}
   .col-sm-1 { grid-column: span 1; }
   .col-sm-2 { grid-column: span 2; }
   .col-sm-3 { grid-column: span 3; }
@@ -60,15 +60,14 @@
   .col-sm-12 { grid-column: span 12; }
 }
 
-/* MEDIUM */
+/* medium */
+@media (min-width: 750px) {
 
-@media (min-width: 750 px) {
+  .gap.md-small { --grid-gap:0.5em; }
+  .gap.md-medium { --grid-gap:1em; }
+  .gap.md-large { --grid-gap:2em; }
 
-.gap.md-large { --grid-gap: 2em; }
-.gap.md-medium { --grid-gap: 1em; }
-.gap.md-small { --grid-gap: 0.5em; }
-
-  .col-md-0 { display:none; }
+  .col-md-0 { display:none;}
   .col-md-1 { grid-column: span 1; }
   .col-md-2 { grid-column: span 2; }
   .col-md-3 { grid-column: span 3; }
@@ -83,14 +82,14 @@
   .col-md-12 { grid-column: span 12; }
 }
 
-/* LARGE */
+/* large */
+@media (min-width: 900px) {
 
-@media (min-width: 900 px) {
-  .gap.lg-large { --grid-gap: 2em; }
-  .gap.lg-medium { --grid-gap: 1em; }
-  .gap.lg-small { --grid-gap: 0.5em; }
+  .gap.lg-small { --grid-gap:0.5em; }
+  .gap.lg-medium { --grid-gap:1em; }
+  .gap.lg-large { --grid-gap:2em; }
 
-  .col-lg-0 { display:none; }
+  .col-lg-0 { display:none;}
   .col-lg-1 { grid-column: span 1; }
   .col-lg-2 { grid-column: span 2; }
   .col-lg-3 { grid-column: span 3; }
@@ -105,14 +104,14 @@
   .col-lg-12 { grid-column: span 12; }
 }
 
-/* X-LARGE */
+/* x-large */
+@media (min-width: 1200px) {
 
-@media (min-width: 1200 px) {
-  .gap.xl-large { --grid-gap: 2em; }
-  .gap.xl-medium { --grid-gap: 1em; }
-  .gap.xl-small { --grid-gap: 0.5em; }
+  .gap.xl-small { --grid-gap:0.5em; }
+  .gap.xl-medium { --grid-gap:1em; }
+  .gap.xl-large { --grid-gap:2em; }
 
-  .col-xl-0 { display:none; }
+  .col-xl-0 { display:none;}
   .col-xl-1 { grid-column: span 1; }
   .col-xl-2 { grid-column: span 2; }
   .col-xl-3 { grid-column: span 3; }
