--- a/aaron.washington/lib/css/gridsystem.css
+++ b/aaron.washington/lib/css/gridsystem.css
@@ -5,54 +5,6 @@
     grid-template-columns: repeat(12, 1fr);
 }
 
-.col-1 {
-    grid-column: span 1;
-}
-
-.col-2 {
-    grid-column: span 2;
-}
-
-.col-3 {
-    grid-column: span 3;
-}
-
-.col-4 {
-    grid-column: span 4;
-}
-
-.col-5 {
-    grid-column: span 5;
-}
-
-.col-6 {
-    grid-column: span 6;
-}
-
-.col-7 {
-    grid-column: span 7;
-}
-
-.col-8 {
-    grid-column: span 8;
-}
-
-.col-9 {
-    grid-column: span 9;
-}
-
-.col-10 {
-    grid-column: span 10;
-}
-
-.col-11 {
-    grid-column: span 11;
-}
-
-.col-12 {
-    grid-column: span 12;
-}
-
 
 /**** EXTRA SMALL ***/
 
@@ -273,51 +225,51 @@
 /**** EXTRA LARGE ***/
 
 @media (min-width: 1200px) {
-    .col-sm-1 {
+    .col-xl-1 {
         grid-column: span 1;
     }
     
-    .col-sm-2 {
+    .col-xl-2 {
         grid-column: span 2;
     }
     
-    .col-sm-3 {
+    .col-xl-3 {
         grid-column: span 3;
     }
     
-    .col-sm-4 {
+    .col-xl-4 {
         grid-column: span 4;
     }
     
-    .col-sm-5 {
+    .col-xl-5 {
         grid-column: span 5;
     }
     
-    .col-sm-6 {
+    .col-xl-6 {
         grid-column: span 6;
     }
     
-    .col-sm-7 {
+    .col-xl-7 {
         grid-column: span 7;
     }
     
-    .col-sm-8 {
+    .col-xl-8 {
         grid-column: span 8;
     }
     
-    .col-sm-9 {
+    .col-xl-9 {
         grid-column: span 9;
     }
     
-    .col-sm-10 {
+    .col-xl-10 {
         grid-column: span 10;
     }
     
-    .col-sm-11 {
+    .col-xl-11 {
         grid-column: span 11;
     }
     
-    .col-sm-12 {
+    .col-xl-12 {
         grid-column: span 12;
     }
 }
