--- a/aaron.washington/lib/css/styleguide.css
+++ b/aaron.washington/lib/css/styleguide.css
@@ -166,6 +166,16 @@ button.light {
 
 
 
+/*** SMALL CLASSES ***/
+
+.media-image {
+    max-width: 100%;
+    vertical-align: text-bottom;
+}
+
+
+
+
 /********** COMPONENTS **********/
 
 
