--- a/aaron.washington/css/storetheme.css
+++ b/aaron.washington/css/storetheme.css
@@ -1,3 +1,26 @@
 body {
     background-color: var(--color-primary-light);
 }
+
+
+@media (max-width: 800px) {
+    .container {
+        padding-left: 1em;
+        padding-right: 1em;
+    }
+    
+    /*.navbar h1 {
+        padding-left: 1em;
+    }*/
+}
+
+
+@media (max-width: 400px) {
+    .navbar .display-flex {
+        display: block;
+    }
+
+    .navbar .nav li {
+        line-height: 2em;
+    }
+}
