--- a/aaron.washington/css/storetheme.css
+++ b/aaron.washington/css/storetheme.css
@@ -3,6 +3,11 @@ body {
     background-color: var(--color-primary-light);
 }
 
+#tableofcontents ul li {
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+}
+
 
 @media (max-width: 800px) {
     .container {
