--- a/aaron.washington/lib/css/styleguide.css
+++ b/aaron.washington/lib/css/styleguide.css
@@ -5,6 +5,10 @@
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 :root {
     --color-primary-dark: #202124;
     --color-primary-medium: #3d3e44;
@@ -43,37 +47,45 @@ h2,
 h3,
 h4,
 h5 {
-    font-family: BrandonText-Bold, 'Rubik', Arial, sans-serif;
-    font-weight: 700;
-    margin: 1em 0em 0.5em 0em;
+    margin: 0.5rem 0rem;
     padding: 0;
 }
 
 h1 {
-    font-size: 4em;
+    font-family: BrandonText-Bold, 'Rubik', Arial, sans-serif;
+    font-weight: 700;
+    font-size: 4rem;
 }
 
 h2 {
-    font-size: 4em;
+    font-family: BrandonText-Bold, 'Rubik', Arial, sans-serif;
+    font-weight: 700;
+    font-size: 3rem;
 }
 
 h3 {
-    font-size: 3em;
+    font-family: BrandonText-Bold, 'Rubik', Arial, sans-serif;
+    font-weight: 700;
+    font-size: 2rem;
 }
 
 h4 {
-    font-size: 2em;
+    font-family: BrandonText-Regular, 'Rubik', Arial, sans-serif;
+    font-weight: 400;
+    font-size: 1.6rem;
 }
 
 h5 {
-    font-size: 1.5rem;
+    font-family: BrandonText-Regular, 'Rubik', Arial, sans-serif;
+    font-weight: 400;
+    font-size: 1.3rem;
 }
 
 p {
     font-family: 'Rubik', Arial, sans-serif;
     font-weight: 400;
     font-size: 1rem;
-    margin: 0.5rem 0rem 1.5rem 0rem;
+    margin: 0.5rem 0rem;
     padding: 0;
     line-height: 1.5rem;
 }
@@ -140,6 +152,9 @@ button.light {
     max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 3rem;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
 }
 
 .display-flex {
@@ -297,10 +312,16 @@ button.light {
 .card {
     margin: 0;
     padding: 1rem;
-    background-color: var(--color-primary-dark);
+    border-radius: 1rem;
 }
 
-    .card a {
+    .card a,
+    .card h1,
+    .card h2,
+    .card h3,
+    .card h4,
+    .card h5,
+    .card p {
         color: var(--color-primary-light);
     }
 
@@ -313,6 +334,29 @@ button.light {
         font-weight: 400;
     }
 
+
+.card-dark {
+    width: 100%;
+    height: 20vh;
+    color: #fff;
+    text-align: center;
+    margin: 0;
+    padding: 1rem;
+    border-radius: 1rem;
+    background-color: var(--color-primary-dark);
+}
+
+.card-light {
+    width: 100%;
+    height: 20vh;
+    color: var(--color-primary-dark);
+    text-align: center;
+    margin: 0;
+    padding: 1rem;
+    border-radius: 1rem;
+    border: 1px solid var(--color-primary-medium);
+    background-color: var(--color-primary-light);
+}
 
 .card-img {
     width: 100%;
