--- a/aaron.washington/lib/css/styleguide.css
+++ b/aaron.washington/lib/css/styleguide.css
@@ -710,6 +710,12 @@ hr {
     border: 1px solid var(--color-neutral-medium);
 }
 
+#tables .card-light h4 {
+    text-align: left;
+    margin-top: 0rem;
+    margin-bottom: 1rem;
+}
+
 
 
 /** FOOTER **/
