--- a/aaron.washington/css/storetheme.css
+++ b/aaron.washington/css/storetheme.css
@@ -38,6 +38,59 @@ body {
 }
 
 
+.figure.product {
+    border-radius: 0.75rem;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    overflow: hidden;
+}
+
+.product-overlay {
+    position: relative;
+    overflow: hidden;
+}
+
+    .product-overlay figcaption {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0,0,0,0.5);
+        opacity: 0;
+        transition: all 0.3s ease;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+        .product-overlay:hover figcaption {
+            opacity: 1;
+            cursor: pointer;
+        }
+
+        .product-overlay .caption-body {
+            background-color: #fff;
+            border-radius: 0.5rem;
+            padding: 2rem;
+            transform: translateY(2rem);
+            transition: all 0.3s ease;
+        }
+
+            .product-overlay:hover .caption-body {
+                transform: translateY(0);
+            }
+
+
+        .product-overlay img {
+            transform: scale(1,1);
+            transition: all 0.3s ease;
+        }
+
+            .product-overlay:hover img {
+                transform: scale(1.2,1.2);
+            }
+
+
 
 
 @media (max-width: 800px) {
@@ -54,6 +107,26 @@ body {
         padding-left: 1em;
     }*/
 }
+
+
+@media (max-width: 600px) {
+    .product-overlay figcaption {
+        position: relative;
+        display: block;
+        top: initial;
+        left: initial;
+        width: 100%;
+        height: initial;
+        opacity: 1;
+        background-color: initial;
+    }
+
+    .product-overlay .caption-body {
+        transform: none;
+        padding: 0;
+    }
+}
+
 
 
 @media (max-width: 400px) {
