--- a/aaron.washington/lib/css/styleguide.css
+++ b/aaron.washington/lib/css/styleguide.css
@@ -747,17 +747,18 @@ hr {
     display: inline-block;
     background-color: var(--color-neutral-light);
     border-width: 0;
-    border-bottom: 1px solid var(--color-neutral-medium);
+    border-bottom: 2px solid var(--color-neutral-medium);
     border-radius: 0.5rem;
     padding: 1rem;
+    margin-bottom: 1rem;
     font: inherit;
     -webkit-appearance: none;
     color: var(--color-primary-dark);
     width: 100%;
+    outline: 0;
 }
 
-    .form-input:active {
-        border-width: 0;
+    .form-input:focus{
         border-bottom: 2px solid var(--color-accent-red-light);
     }
 
