--- a/aaron.washington/lib/css/styleguide.css
+++ b/aaron.washington/lib/css/styleguide.css
@@ -452,7 +452,7 @@ hr {
 
 .card-dark {
     width: 100%;
-    height: 20vh;
+    min-height: 10vh;
     color: #fff;
     text-align: center;
     vertical-align: middle;
@@ -464,7 +464,7 @@ hr {
 
 .card-light {
     width: 100%;
-    height: 20vh;
+    min-height: 10vh;
     color: var(--color-primary-dark);
     text-align: center;
     vertical-align: middle;
@@ -520,8 +520,8 @@ hr {
 
 .card-img {
     width: 100%;
-    height: 20vh;
-    padding: 2rem;
+    min-height: 10vh;
+    padding: 1.25rem;
     text-align: center;
     border-radius: 1rem;
     background-repeat: no-repeat;
@@ -750,6 +750,7 @@ hr {
 .form-button,
 .form-hotdog,
 .form-hotdog input,
+.form-select>select,
 .form-item {
     font: inherit;
     display: inline-block;
@@ -820,6 +821,35 @@ hr {
     .form-hotdog.light {
         border: 1px solid var(--color-primary-dark);
     }
+
+
+.form-select {
+    position: relative;
+}
+
+    .form-select>select {
+        padding: 1rem 1.5rem;
+        cursor: pointer;
+    }
+
+    .form-select::after {
+        content: '▾';
+        font-family: arial, sans-serif;
+        font-size: 1.2rem;
+        position: absolute;
+        top: 50%;
+        right: 0.5rem;
+        transform: translateY(-50%);
+        pointer-events: none;
+        color: var(--color-neutral-medium);
+    }
+
+    .form-select select option {
+        color: var(--color-primary-light);
+        background-color: var(--color-primary-dark);
+    }
+
+
 
 
 
